# Proyecto-Ciberseguridad

./: .gitignore  GUIA_DE_USO.md  README.md  analisis_vulnerabilidades.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: config.json
data/results/: accelerate-codeql.json  accelerate-grype.json  accelerate-python-codeql.sarif  accelerate-sbom.json  alignment-handbook-grype.json  alignment-handbook-python-codeql.sarif  alignment-handbook-sbom.json  autotrain-advanced-codeql.json  autotrain-advanced-grype.json  autotrain-advanced-python-codeql.sarif  autotrain-advanced-sbom.json  clone-log.json  codeql-summary.json  consolidated-report.json  dataset-viewer-codeql.json  dataset-viewer-grype.json  dataset-viewer-python-codeql.sarif  datasets-codeql.json  datasets-grype.json  datasets-python-codeql.sarif  datasets-sbom.json  diffusers-codeql.json  diffusers-grype.json  diffusers-python-codeql.sarif  diffusers-sbom.json  distil-whisper-grype.json  distil-whisper-python-codeql.sarif  distil-whisper-sbom.json  grype-summary.json  kernels-codeql.json  kernels-grype.json  kernels-python-codeql.sarif  kernels-sbom.json  lerobot-codeql.json  lerobot-grype.json  lerobot-python-codeql.sarif  lerobot-sbom.json  (+58 more)
nbs/: 00_pipeline_completo.ipynb  01_analisis.ipynb  01_analisis_vulnerabilidades.ipynb  Untitled-1.ipynb
scripts/: analyzer.py  clone_repos.py  generate_codeql.py  generate_grype.py  generate_reports.py  generate_sboms.py  subprocess_utils.py
visualizer/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+9 files in other folders)
