[project]
name = "security-analyzer"
version = "0.1.0"
description = "Herramienta de análisis de seguridad con CodeQL, Grype y SBOM"
authors = [{name = "Tu Nombre", email = "tu.email@ejemplo.com"}]
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
]